fix: improve alignment of category images

--- a/src/routes/Search/Search.module.scss
+++ b/src/routes/Search/Search.module.scss
@@ -51,8 +51,16 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: space-between;
         gap: 1rem;
         position: relative;
+
+        .cat-image {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-grow: 1;
+        }
 
         img {
           width: 100%;
